elastic/kubernetes/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-elastic-internal
  namespace: elastic
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: elastic
      ports:
        - protocol: TCP
          port: 9200
        - protocol: TCP
          port: 9300
        - protocol: TCP
          port: 5601
        - protocol: TCP
          port: 8220
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: elastic
      ports:
        - protocol: TCP
          port: 9200
        - protocol: TCP
          port: 9300
    - to: []
      ports:
        - protocol: UDP
          port: 53
